# BotRustTeste

./: Cargo.toml
src/: event.rs  main.rs
src/commands/: mod.rs  util.rs
