[package]
name = "teste"
version = "0.1.0"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "^0.10.4"

[dependencies.tokio]
version = "^1.3.0"
features = ["macros", "rt-multi-thread"]